fixtures/python/fallback/should_fail/contextlib_suppress.py
import contextlib

with contextlib.suppress(FileNotFoundError):
    data = open("config.json").read()
